--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="naver-site-verification" content="ee42fec9e1f63e25c88c44a098f74c894fe9d624" />
     <title>겜블시티</title>
     <meta name="description" content="⚽ 레알 마드리드 , 스포티비 공식 스폰서 ⚽ 🎯 5억까지 보증해주는 탄탄한 사이트 🎯">
     <meta name="keywords" content="카지노,토지노,스포츠,베팅,도박,도박중독,겜블,겜블시티,토지노,베팅,토싸,보증금,레알마드리드,구글,네이버,온라인 카지노,실시간 카지노,라이브 카지노,바카라,블랙잭,룰렛,슬롯머신,카지노 사이트 추천,카지노 보너스,카지노 콤프,카지노 프로모션,스포츠 배팅, 라이브 배팅,축구,축구 베팅,레알마드리드,토트넘,리버풀,아스널,맨체스터유나이티드,베팅 보너스,스포츠 토토,스포츠벳,배당률,바카라전략,블랙잭확률,슬롯머신,nolimitcity,pragmatic,evolution,에볼루션,노리밋,프라그마틱,에볼루션바카라,포커,홀덤,호르더므">
